@@ -1343,32 +1343,52 @@ class User implements IDBAccessObject, UserIdentity {
 		// returned here, so just use it if applicable.
 		$session = $this->getRequest()->getSession();
 		$user = $session->getUser();
+
 		if ( $user->isLoggedIn() ) {
 			$this->loadFromUserObject( $user );
-
-			// If this user is autoblocked, set a cookie to track the Block. This has to be done on
-			// every session load, because an autoblocked editor might not edit again from the same
-			// IP address after being blocked.
-			$config = RequestContext::getMain()->getConfig();
-			if ( $config->get( 'CookieSetOnAutoblock' ) === true ) {
-				$block = $this->getBlock();
-				$shouldSetCookie = $this->getRequest()->getCookie( 'BlockID' ) === null
-					&& $block
-					&& $block->getType() === Block::TYPE_USER
-					&& $block->isAutoblocking();
-				if ( $shouldSetCookie ) {
-					wfDebug( __METHOD__ . ': User is autoblocked, setting cookie to track' );
-					$block->setCookie( $this->getRequest()->response() );
-				}
+			if ( $user->isBlocked() ) {
+				// If this user is autoblocked, set a cookie to track the Block. This has to be done on
+				// every session load, because an autoblocked editor might not edit again from the same
+				// IP address after being blocked.
+				$this->trackBlockWithCookie();
 			}
 
 			// Other code expects these to be set in the session, so set them.
 			$session->set( 'wsUserID', $this->getId() );
 			$session->set( 'wsUserName', $this->getName() );
 			$session->set( 'wsToken', $this->getToken() );
+
 			return true;
 		}
+
 		return false;
+	}
+
+	/**
+	 * Set the 'BlockID' cookie depending on block type and
+	 * user authentication status.
+	 */
+	public function trackBlockWithCookie() {
+		$block = $this->getBlock();
+		if ( $block && $this->getRequest()->getCookie( 'BlockID' ) === null ) {
+			$config = RequestContext::getMain()->getConfig();
+			$shouldSetCookie = false;
+
+			if ( $this->isAnon() && $config->get( 'EnableAutoblockForIpBlocks' ) ) {
+				// If user is logged-out, set a cookie to track the Block
+				$shouldSetCookie = in_array( $block->getType(), [
+					Block::TYPE_IP, Block::TYPE_RANGE
+				] );
+			} elseif ( $this->isLoggedIn() && $config->get( 'CookieSetOnAutoblock' ) ) {
+				$shouldSetCookie = $block->getType() === Block::TYPE_USER
+								   && $block->isAutoblocking();
+			}
+
+			if ( $shouldSetCookie ) {
+				wfDebug( __METHOD__ . ': User is autoblocked, setting cookie to track' );
+				$block->setCookie( $this->getRequest()->response() );
+			}
+		}
 	}
 
 	/**
@@ -1896,12 +1916,24 @@ class User implements IDBAccessObject, UserIdentity {
 			// An ID was found in the cookie.
 			$tmpBlock = Block::newFromID( $blockCookieId );
 			if ( $tmpBlock instanceof Block ) {
-				// Check the validity of the block.
-				$blockIsValid = $tmpBlock->getType() == Block::TYPE_USER
-					&& !$tmpBlock->isExpired()
-					&& $tmpBlock->isAutoblocking();
 				$config = RequestContext::getMain()->getConfig();
-				$useBlockCookie = ( $config->get( 'CookieSetOnAutoblock' ) === true );
+
+				switch ( $tmpBlock->getType() ) {
+					case Block::TYPE_USER:
+						$blockIsValid = !$tmpBlock->isExpired() && $tmpBlock->isAutoblocking();
+						$useBlockCookie = ( $config->get( 'CookieSetOnAutoblock' ) === true );
+						break;
+					case Block::TYPE_IP:
+					case Block::TYPE_RANGE:
+						// If block is type IP or IP range, load only if user is not logged in (T152462)
+						$blockIsValid = !$tmpBlock->isExpired() && $this->isAnon();
+						$useBlockCookie = ( $config->get( 'EnableAutoblockForIpBlocks' ) === true );
+						break;
+					default:
+						$blockIsValid = false;
+						$useBlockCookie = false;
+				}
+
 				if ( $blockIsValid && $useBlockCookie ) {
 					// Use the block.
 					return $tmpBlock;
@@ -4371,36 +4403,19 @@ class User implements IDBAccessObject, UserIdentity {
 	}
 
 	/**
-	 * If this user is logged-in and blocked,
-	 * block any IP address they've successfully logged in from.
+	 * Spread current block to the request IP if user is logged-in and
+	 * block is autoblocking or if user is not logged-in and current IP is not
+	 * already blocked
+	 *
 	 * @return bool A block was spread
 	 */
 	public function spreadAnyEditBlock() {
-		if ( $this->isLoggedIn() && $this->isBlocked() ) {
-			return $this->spreadBlock();
+		if ( $this->isBlocked() ) {
+			$block = $this->getBlock();
+			return (bool)$block->doAutoblock( $this->getRequest()->getIP() );
 		}
 
 		return false;
-	}
-
-	/**
-	 * If this (non-anonymous) user is blocked,
-	 * block the IP address they've successfully logged in from.
-	 * @return bool A block was spread
-	 */
-	protected function spreadBlock() {
-		wfDebug( __METHOD__ . "()\n" );
-		$this->load();
-		if ( $this->mId == 0 ) {
-			return false;
-		}
-
-		$userblock = Block::newFromTarget( $this->getName() );
-		if ( !$userblock ) {
-			return false;
-		}
-
-		return (bool)$userblock->doAutoblock( $this->getRequest()->getIP() );
 	}
 
 	/**
